Copy and paste whoe code into the right repository

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,1 +1,11 @@
-//
+@import "partials/variables";
+@import "partials/common";
+
+//header
+@import "partials/header";
+
+//Home
+@import "partials/home";
+
+//footer
+@import "partials/footer";
