--- a/resources/sass/partials/_home.scss
+++ b/resources/sass/partials/_home.scss
@@ -37,6 +37,17 @@ main{
                             display:block;
                         }
                     }
-                }
+            }
         }
+    .button{
+        margin: 1rem auto 0;
+        border-style: none;
+        padding: 0.5rem 3rem;
+        font-size: 15px;
+        font-weight: bold;
+        color: white;
+        background-color: $primary_color_header;
+    }
+        
 }
+
