--- a/resources/sass/partials/_home.scss
+++ b/resources/sass/partials/_home.scss
@@ -19,15 +19,16 @@ main{
                     width: 180px;
                     height: 180px;
                     object-fit: cover center;
+                    margin: auto;
                     }
                     .details{
+                        font-size: 13px;
                         display: none;
                         position:absolute;
                         top: 50%;
-                        
                         transform: translateY(-50%);
                         color: white;
-                        padding: 10px;
+                        padding: 15px;
                     }
                     &:hover{
                         img{
