- Remove collection for type in comics route. - Switch to plain selection, removing comic_book vars. - Transform .card into link to wrap single comic.

--- a/resources/sass/partials/_home.scss
+++ b/resources/sass/partials/_home.scss
@@ -10,7 +10,7 @@ main{
             }
 
             .card {
-                width: calc(100% / 5 - 20px);
+                // width: calc(100% / 6 - 20px);
                 margin: 1rem 10px;
                 display: flex;
                 flex-direction: column;
