--- a/public/css/app.css
+++ b/public/css/app.css
@@ -58,6 +58,9 @@ body {
   padding: 2rem 0;
   font-size: 12px;
 }
+#site_header .navbar .container nav a.active {
+  color: #0282f9;
+}
 #site_header .navbar .container .search {
   position: relative;
   border-bottom: 2px solid #0282f9;
@@ -122,13 +125,14 @@ main .container h1 {
   margin: 3rem 0;
 }
 main .container .card {
+  width: calc(100% / 6 - 20px);
   margin: 1rem 10px;
   display: flex;
   flex-direction: column;
   position: relative;
 }
 main .container .card > img {
-  width: 180px;
+  width: 100%;
   height: 180px;
   -o-object-fit: cover center;
      object-fit: cover center;
@@ -157,6 +161,19 @@ main .button {
   font-weight: bold;
   color: white;
   background-color: #0282f9;
+}
+
+.id_comic {
+  color: white;
+}
+.id_comic .details {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  margin-left: 20px;
+}
+.id_comic .description {
+  margin-top: 20px;
 }
 
 #site_footer {
