--- a/resources/sass/partials/_header.scss
+++ b/resources/sass/partials/_header.scss
@@ -49,6 +49,9 @@
                     color: black;
                     padding: 2rem 0;
                     font-size: 12px;
+                    &.active{
+                        color: $primary_color_header;
+                    }
                 }
             }
 
