--- a/resources/sass/partials/_home.scss
+++ b/resources/sass/partials/_home.scss
@@ -10,13 +10,14 @@ main{
             }
 
             .card {
-                // width: calc(100% / 6 - 20px);
+                width: calc(100% / 6 - 20px);
                 margin: 1rem 10px;
+
                 display: flex;
                 flex-direction: column;
                 position: relative;
                     >img{
-                    width: 180px;
+                    width: 100%;
                     height: 180px;
                     object-fit: cover center;
                     margin: auto;
@@ -38,8 +39,8 @@ main{
                             display:block;
                         }
                     }
-            }
         }
+    }
     .button{
         margin: 1rem auto 0;
         border-style: none;
