--- a/public/css/app.css
+++ b/public/css/app.css
@@ -176,7 +176,117 @@ main .button {
   margin-top: 20px;
 }
 
+#site_main .features {
+  background-color: #0282f9;
+  padding: 5px;
+}
+#site_main .features .container {
+  display: flex;
+  justify-content: space-between;
+}
+#site_main .features .container a {
+  display: flex;
+  align-items: center;
+  text-decoration: none;
+}
+#site_main .features .container a img {
+  width: 40px;
+}
+#site_main .features .container a div {
+  margin-left: 10px;
+  color: white;
+  font-size: 13px;
+  font-weight: bold;
+  text-transform: uppercase;
+}
+
 #site_footer {
-  height: 200px;
-  background-color: #308200;
+  background-image: url("../img/footer-bg.jpg");
+  font-size: 13px;
+  color: lightgrey;
+}
+#site_footer > .container {
+  display: flex;
+  flex-direction: column;
+  margin: auto;
+  padding: 40px 0;
+  background-image: url("../img/dc-logo-bg.png");
+  background-repeat: no-repeat;
+  background-position: right;
+}
+#site_footer > .container a {
+  color: inherit;
+  text-decoration: none;
+}
+#site_footer > .container a:hover {
+  color: #0282f9;
+}
+#site_footer > .container .menus {
+  display: flex;
+}
+#site_footer > .container .menus .footer_menu:first-child li:last-child .footer_menu {
+  margin-top: 15px;
+}
+#site_footer > .container .menus .footer_menu {
+  list-style-type: none;
+}
+#site_footer > .container .menus .footer_menu .menu_heading {
+  font-size: 20px;
+  color: white;
+  text-transform: uppercase;
+  font-family: "Greta Sans Condensed Bold", "Greta Sans Bold", Arial, sans-serif;
+  font-weight: bold;
+  margin-bottom: 15px;
+}
+#site_footer > .container .menus .footer_menu li {
+  margin: 4px 0;
+}
+#site_footer > .container .menus > .footer_menu {
+  margin-right: 30px;
+}
+#site_footer > .container .disclaimer {
+  margin-top: 20px;
+}
+#site_footer > .container .disclaimer a {
+  color: #0282f9;
+}
+#site_footer .call-to-action {
+  padding: 20px 0;
+  background-color: grey;
+}
+#site_footer .call-to-action .container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: auto;
+}
+#site_footer .call-to-action .container button {
+  color: white;
+  border: 2px solid #0282f9;
+  padding: 15px 10px;
+  background-color: transparent;
+  cursor: pointer;
+  font-size: 16px;
+  font-weight: bold;
+  transition: background-color 0.3s;
+}
+#site_footer .call-to-action .container button:hover {
+  background-color: #0282f9;
+}
+#site_footer .call-to-action .container .social {
+  display: flex;
+  align-items: center;
+  gap: 25px;
+}
+#site_footer .call-to-action .container .social a img {
+  transition: filter 0.25s;
+}
+#site_footer .call-to-action .container .social a:hover img {
+  filter: brightness(80%);
+}
+#site_footer .call-to-action .container .social span {
+  font-size: 20px;
+  color: #0282f9;
+  font-family: "Greta Sans Condensed Bold", "Greta Sans Bold", Arial, sans-serif;
+  font-weight: bold;
 }
