--- a/resources/sass/partials/_comic.scss
+++ b/resources/sass/partials/_comic.scss
@@ -14,6 +14,19 @@
         }
     }
 
+    button{
+        border-style: none;
+        background-color: $primary_color_header;
+        padding: 0.5rem 2rem;
+        margin:15px 5px 0 5px;
+        a{
+            color: white;
+            text-decoration: none;
+            font-size: 15px;
+            font-weight: 600;
+        }
+    }
+
     .ad{
         position: absolute;
         top: 0;
